Add all buttons

--- a/index.html
+++ b/index.html
@@ -10,10 +10,27 @@
     <body>
         <div id="calculator">
             <div id="screen">
-
+                
             </div>
             <div id="buttons">
-                
+                <button id="clearBtn">CLEAR</button>
+                <button id="deleteBtn">DELETE</button> 
+                <button id="digit-7">7</button>
+                <button id="digit-8">8</button> 
+                <button id="digit-9">9</button>
+                <button id="divideBtn">÷</button>
+                <button id="digit-4">4</button>
+                <button id="digit-5">5</button>
+                <button id="digit-6">6</button>
+                <button id="multiplyBtn">x</button>
+                <button id="digit-1">1</button>
+                <button id="digit-2">2</button>
+                <button id="digit-3">3</button>
+                <button id="subtractBtn">-</button> 
+                <button id="pointBtn">.</button> 
+                <button id="digit-0">0</button>
+                <button id="equalsBtn">=</button> 
+                <button id="addBtn">+</button> 
             </div>
         </div>
     </body>
