--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
                 
             </div>
             <div id="buttons">
-                <button id="clearBtn">CLEAR</button>
-                <button id="deleteBtn">DELETE</button> 
-                <button id="digit-7">7</button>
-                <button id="digit-8">8</button> 
-                <button id="digit-9">9</button>
-                <button id="divideBtn">÷</button>
-                <button id="digit-4">4</button>
-                <button id="digit-5">5</button>
-                <button id="digit-6">6</button>
-                <button id="multiplyBtn">x</button>
-                <button id="digit-1">1</button>
-                <button id="digit-2">2</button>
-                <button id="digit-3">3</button>
-                <button id="subtractBtn">-</button> 
-                <button id="pointBtn">.</button> 
-                <button id="digit-0">0</button>
-                <button id="equalsBtn">=</button> 
-                <button id="addBtn">+</button> 
+                <button id="clearBtn" value="C">CLEAR</button>
+                <button id="deleteBtn" value="D">DELETE</button> 
+                <button id="digit-7" value="7">7</button>
+                <button id="digit-8" value="8">8</button> 
+                <button id="digit-9" value="9">9</button>
+                <button id="divideBtn" value="/">÷</button>
+                <button id="digit-4" value="4">4</button>
+                <button id="digit-5" value="5">5</button>
+                <button id="digit-6" value="6">6</button>
+                <button id="multiplyBtn" value="*">x</button>
+                <button id="digit-1" value="1">1</button>
+                <button id="digit-2" value="2">2</button>
+                <button id="digit-3" value="3">3</button>
+                <button id="subtractBtn" value="-">-</button> 
+                <button id="pointBtn" value=".">.</button> 
+                <button id="digit-0" value="0">0</button>
+                <button id="equalsBtn" value="=">=</button> 
+                <button id="addBtn" value="+">+</button> 
             </div>
         </div>
     </body>
